# graph-wedgelets

./: .gitignore  README.md  pyproject.toml
graph_wedgelets/: graph.py  image.py
graph_wedgelets/legacy/: image.py
graph_wedgelets/test/: graph.py  image.py
tests/: showcase.ipynb
tests/img/: IMG-CREDITS.md
tests/npz/: big-ben.npz  malta_signal.npz  young-people.npz
