[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_wedgelets"
version = "0.2.0"
authors = [
  { name = "Riccardo Cazzin" },
  { name = "Wolfgang Erb", email = "wolfgang.erb@unipd.it" },
]
description = "Image and graph compression using graph wedgelets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = ["igraph>=1.0.0", "numpy>=2.0.0", "pillow>=12.0.0"]

[project.urls]
Homepage = "https://github.com/ZinRicky/graph-wedgelets"
Issues = "https://github.com/ZinRicky/graph-wedgelets/issues"
